--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 		<script src="lib/p5.js"></script>
 		<script src="lib/p5.dom.js"></script>
 		<script src="lib/p5.speech.js"></script>
+		<script src="lib/p5.sound.js"></script>
 		<script src="js/sketch.js"></script>
 		<link rel="stylesheet" href="css/main.css">
 	</head>
